# Towers-of-Hanoi

./: README.md  task1.erl
ebin/: Makefile.am  Makefile.in
src/: task2.erl  task3.erl
